<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    android:padding="16dp">

    <!--Row-->
    <TextView
        android:text="String value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvStringVal"
        android:text="Not set" />

    <!--Row-->
    <TextView
        android:text="Boolean value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvBooleanVal"
        android:text="Not set" />

    <!--Row-->
    <TextView
        android:text="Integer value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvIntegerVal"
        android:text="Not set" />

    <!--Row-->
    <TextView
        android:text="Long value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvLongVal"
        android:text="Not set" />

    <!--Row-->
    <TextView
        android:text="Float value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvFloatVal"
        android:text="Not set" />

    <!--Row-->
    <TextView
        android:text="Double value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvDoubleVal"
        android:text="Not set" />
    <!--Row-->
    <TextView
        android:text="String1 value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvString1Val"
        android:text="Not set" />
    <!--Row-->
    <TextView
        android:text="String2 value"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvString2Val"
        android:text="Not set" />

</android.support.v7.widget.GridLayout>